# duckdb_substrait

./: CMakeLists.txt  TPC-H-small_new.duckdb  main.cpp
